fix console overflow issues

--- a/app/assets/css/fics.css.scss
+++ b/app/assets/css/fics.css.scss
@@ -8,11 +8,6 @@ div.header {
   width: 100%;
 }
 
-div.tab-container {
-  position: absolute;
-  bottom: 0px;
-}
-
 div.tab-container div.tab-container {
   top: 40px;
 }
@@ -21,6 +16,7 @@ div.content {
   position: absolute;
 
   top: 60px;
+  bottom: 0px;
 
   left: 0px;
   right: 0px;
@@ -86,7 +82,10 @@ div.observe-chat {
   }
 }
 
-.console {
-  height: 100%;
-  overflow-y: auto;
+pre.console {
+  position: absolute;
+  top: 50px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 }
